# French-Roast

./: .gitignore  Dockerfile  README.md  build.sh
docs/: user_manual.tex
modules/agent/cmake/: CMakeLists.txt
modules/agent/config/example/: hooks_config2.txt  main_config.txt
modules/agent/include/: Agent.h  AgentHooks.h  AgentSignalReporting.h  AgentUtil.h  AsynchQueue.h  CommandListener.h  Config.h  CoutTransport.h  FileTransport.h  HookValidator.h  Hooks.h  Reporter.h  ReporterImp.h  ServerTransport.h  Transport.h
modules/agent/src/: Agent.cpp  AgentHooks.cpp  AgentSignalReporting.cpp  AgentUtil.cpp  Config.cpp  CoutTransport.cpp  FileTransport.cpp  HookValidator.cpp  Hooks.cpp  Reporter.cpp  ReporterFile.cpp  ReporterOut.cpp  ReporterServer.cpp  ServerTransport.cpp
modules/agent/tests/cmake/: CMakeLists.txt
modules/agent/tests/include/: MockJNI.h  MockJVMTI.h
modules/agent/tests/java_src/frpackage/: SomeClass.java
modules/agent/tests/src/: Main.cpp  MockJNI.cpp  MockJVMTI.cpp  Test_Agent.cpp  Test_AgentSignalReporting.cpp  test_reporter.cpp  test_util.cpp
modules/gui/: mystlyes.txt
modules/gui/config/: fr.ini
modules/gui/include/: AboutHelpViewer.h  ActionBar.h  ClassViewer.h  CodeFont.h  DetailHolder.h  DetailViewer.h  DetailViewerModel.h  DoubleClickEater.h  Editor.h  EnterKeyListener.h  FClassViewer.h  FListItem.h  FRMain.h  FRStatus.h  FSignalViewer.h  FTimerViewer.h  FViewer.h  HeapDetailViewer.h  HeapViewer.h  HooksSyntax.h  JammedViewer.h  JammedViewerModel.h  KeyListener.h  MethodRanking.h  QUtil.h  SignalDelegate.h  SignalSyntax.h  StackColumn.h  StackRow.h  TimerItem.h  TrafficViewer.h  fr.h
modules/gui/profile/: src.pro
modules/gui/src/: AboutHelpViewer.cpp  ActionBar.cpp  ClassViewer.cpp  CodeFont.cpp  DetailViewer.cpp  DetailViewerModel.cpp  DoubleClickEater.cpp  Editor.cpp  EnterKeyListener.cpp  FClassViewer.cpp  FListItem.cpp  FRListener.cpp  FRStatus.cpp  FSignalViewer.cpp  FTimerViewer.cpp  FViewer.cpp  HeapDetailViewer.cpp  HeapViewer.cpp  HooksSyntax.cpp  JammedViewer.cpp  JammedViewerModel.cpp  KeyListener.cpp  MainGUI.cpp  MethodRanking.cpp  QUtil.cpp  SignalDelegate.cpp  SignalSyntax.cpp  StackColumn.cpp  StackRow.cpp  TimerItem.cpp  TrafficViewer.cpp  main.cpp
modules/gui/tests/cmake/: CMakeLists.txt
modules/gui/tests/src/: Main.cpp  test_DetailViewerModel.cpp  test_JammedViewerModel.cpp
modules/gui_curses/cmake/: CMakeLists.txt
modules/gui_curses/include/: CursesFrameWork.h  SignalTimerWindow.h  SignalWindow.h
modules/gui_curses/src/: CursesFrameWork.cpp  SignalTimerWindow.cpp  SignalWindow.cpp  main.cpp
modules/instrumentation/: makefile  opcodes.txt
modules/instrumentation/cmake/: CMakeLists.txt
modules/instrumentation/config/: opcodes.txt
modules/instrumentation/include/: AccessFlags.h  Attribute.h  ClassFileComponent.h  ConstantPool.h  Exception.h  FrameConst.h  FrenchRoast.h  Info.h  Instruction.h  Method.h  MethodComponent.h  MethodInfo.h  OpCode.h  OpCodeConst.h  StackMapFrame.h  Util.h
modules/instrumentation/src/: AccessFlags.cpp  ConstantPoolComponents.cpp  Exception.cpp  FrenchRoast.cpp  Instruction.cpp  Method.cpp  MethodComponent.cpp  MethodInfo.cpp  OpCode.cpp  StackMapFrame.cpp  Util.cpp
modules/instrumentation/tests/: compile_java.bat  makefile  run_tests.bat  set_env.bat
modules/instrumentation/tests/cmake/: CMakeLists.txt
modules/instrumentation/tests/include/: testing_utils.h
modules/instrumentation/tests/java_src/frenchroast/: Simple.java
modules/instrumentation/tests/src/: Test.cpp  Test_Instruction.cpp  Test_Main.cpp  Test_Method.cpp  Test_Method_build.cpp  Test_Method_save_buffer.cpp  Test_OpCode.cpp  Test_Util.cpp  testing_utils.cpp
modules/monitor/: hooks_config.txt  makefile
modules/monitor/include/: ClassDetail.h  Command.h  Config.h  Descriptor.h  HeapEvent.h  HeapMonitor.h  HeapReport.h  Hooks.h  InstrumentationReport.h  JammedReport.h  MarkerField.h  MethodStats.h  Monitor.h  MonitorUtil.h  Reporter.h  Signal.h  SignalMarkers.h  SignalParams.h  SignalReport.h  StackFrame.h  StackReport.h  StackTrace.h  TimerReport.h
modules/monitor/src/: ClassDetail.cpp  Config.cpp  Descriptor.cpp  HeapEvent.cpp  HeapReport.cpp  Hooks.cpp  InstrumentationReport.cpp  JammedReport.cpp  MethodStats.cpp  Monitor.cpp  MonitorUtil.cpp  Signal.cpp  SignalMarkers.cpp  SignalParams.cpp  SignalReport.cpp  StackFrame.cpp  StackReport.cpp  StackTrace.cpp  TimerReport.cpp  WindowsReporter.cpp
modules/monitor/tests/: makefile
modules/monitor/tests/cmake/: CMakeLists.txt
modules/monitor/tests/include/: helper.h
modules/monitor/tests/src/: Test.cpp  helper.cpp  test_ClassDetail.cpp  test_Descriptor.cpp  test_JammedReport.cpp  test_Signal.cpp  test_StackFrame.cpp  test_StackTrace.cpp  test_util.cpp
modules/network/cmake/: CMakeLists.txt
modules/network/include/: Connector.h  FRSocket.h  Listener.h
modules/network/src/: Connector.cpp  ConnectorUnix.cpp  ConnectorWindows.cpp  FRSocket.cpp
modules/network/tests/cmake/: CMakeLists.txt
modules/network/tests/include/: MockSocket.h
modules/network/tests/src/: MockFRSocket.cpp  test_connector.cpp
modules/session/include/: Persistor.h  PersistorFile.h  Session.h
modules/session/src/: PersistorFile.cpp  Session.cpp
modules/session/tests/cmake/: CMakeLists.txt
modules/session/tests/src/: test_Session.cpp
modules/signal/include/: SignalValidator.h  fr_signals.h
modules/signal/src/: SignalValidator.cpp  fr_signals.cpp
modules/signal/test/cmake/: CMakeLists.txt
modules/signal/test/src/: Input_Tokenizer.cpp
modules/signal/tests/cmake/: CMakeLists.txt
